deploy/templates/joinaroomdb.yml

apiVersion: v1
kind: Service
metadata:
  name: joinaroom-mysql
  labels:
    app: joinaroom
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: joinaroom
    tier: mysql
  type: NodePort

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: joinaroom-mysql
  labels:
    app: joinaroom
spec:
  selector:
    matchLabels:
      app: joinaroom
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: joinaroom
        tier: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          args:
            - "--ignore-db-dir=lost+found"
            - "--explicit_defaults_for_timestamp=1"
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
